--- a/Workspace/Scrumiverse/WebContent/resources/css/register.css
+++ b/Workspace/Scrumiverse/WebContent/resources/css/register.css
@@ -1,8 +1,3 @@
-/* register */
-#action_content{
-	background-color: black;
-}
-
 .error-container{
     position: fixed;
     top: 20px;
